assets/css/screen.css
/* ... */
body.nav-opened .site-wrapper {
    overflow-x: hidden;
    -webkit-transform: translate3D(-240px, 0, 0);
        -ms-transform: translate3D(-240px, 0, 0);
            transform: translate3D(-240px, 0, 0);
    -webkit-transition: -webkit-transform 0.3s ease;
            transition: transform 0.3s ease;
}

div#subscribe-section {
   margin-top: 1em;
}

.input-email {
    padding: 10px 10px 10px 20px;
    border: 0px solid #ffffff;
    font-size: 1.6rem;
    line-height: 1.4em;
    font-weight: 100;
    border-radius: 3px 0px 0px 3px;
    vertical-align: middle;
    width: 300px;
    font-weight: normal;
}

.button-subscribe {
   margin-left: -5px;
    color: #fff;
    background-color: #45be4e;
    border-color: #4ec157;
    height: 42px;
    width: 120px;
    padding: 10px;
    border: 0px solid #ffffff;
    font-size: 1.6rem;
    line-height: 1.4em;
    font-weight: 100;
    border-radius: 0px 3px 3px 0px;
    vertical-align: middle;
    font-weight: normal;
}

/* ==========================================================================
   4. General - The main styles for the the theme
   ========================================================================== */

/* Big cover image on the home page */
.main-header {
    position: relative;
    display: table;
    width: 100%;
    height: 350px;
    margin-bottom: 5rem;
    text-align: center;
    background: radial-gradient(ellipse farthest-corner at bottom center,#006ef0,#004fac);
    background-size: cover;
    overflow: hidden;
    
}

.main-header .inner {
    width: 80%;
}

.grid-gradient-bg {
    background-image: -webkit-radial-gradient(ellipse farthest-corner at bottom center,#006ef0,#004fac);
    background-image: -moz-radial-gradient(ellipse farthest-corner at bottom center,#006ef0,#004fac);
    background-image: -o-radial-gradient(ellipse farthest-corner at bottom center,#006ef0,#004fac);
    background-image: -ms-radial-gradient(ellipse farthest-corner at bottom center,#006ef0,#004fac);
    background-image: radial-gradient(ellipse farthest-corner at bottom center,#006ef0,#004fac);
}

.grid-bg {
    background-color: transparent;
    /* background-image: -webkit-repeating-linear-gradient(270deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px),-webkit-repeating-linear-gradient(0deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px); */
    background-image: -moz-repeating-linear-gradient(270deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px),-moz-repeating-linear-gradient(0deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px);
    background-image: -o-repeating-linear-gradient(270deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px),-o-repeating-linear-gradient(0deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px);
    background-image: -ms-repeating-linear-gradient(270deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px),-ms-repeating-linear-gradient(0deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px);
    background-image: repeating-linear-gradient(180deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px),repeating-linear-gradient(90deg,rgba(255,255,255,.1) 2px,transparent 4px,transparent 150px);
    height: 100%;
    -webkit-background-size: 150px 150px;
    -moz-background-size: 150px 150px;
    background-size: 150px 150px;
}

.main-nav {
    position: relative;
    padding: 35px 40px;
    margin: 0 0 30px 0;
}

.main-nav a {
    text-decoration: none;
    font-family: 'Open Sans', sans-serif;
}

/* Navigation */
body.nav-opened .nav-cover {
    position: fixed;
    top: 0;
    left: 0;
    right: 240px;
    bottom: 0;
    z-index: 200;
}

.nav {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: 5;
    width: 240px;
    opacity: 0;
    background: #111;
    margin-bottom: 0;
    text-align: left;
    overflow-y: auto;
    -webkit-transition: -webkit-transform 0.5s ease,
                        opacity 0.3s ease 0.7s;
            transition: transform 0.5s ease,
                        opacity 0.3s ease 0.7s;
}

body.nav-closed .nav {
    -webkit-transform: translate3D(97px, 0, 0);
        -ms-transform: translate3D(97px, 0, 0);
            transform: translate3D(97px, 0, 0);
}

body.nav-opened .nav {
    opacity: 1;
    -webkit-transition: -webkit-transform 0.3s ease,
                        opacity 0s ease 0s;
            transition: transform 0.3s ease,
                        opacity 0s ease 0s;
    -webkit-transform: translate3D(0, 0, 0);
        -ms-transform: translate3D(0, 0, 0);
            transform: translate3D(0, 0, 0);
}

.nav-title {
    position: absolute;
    top: 45px;
    left: 30px;
    font-size: 16px;
    font-weight: 100;
    text-transform: uppercase;
    color: #fff;
}

.nav-close {
    position: absolute;
    top: 38px;
    right: 25px;
    width: 20px;
    height: 20px;
    padding: 0;
    font-size: 10px;
}

.nav-close:focus {
    outline: 0;
}

.nav-close:before,
.nav-close:after {
    content: '';
    position: absolute;
    top: 0;
    width: 20px;
    height: 1px;
    background: rgb(150,150,150);
    top: 15px;
    -webkit-transition: background 0.15s ease;
            transition: background 0.15s ease;
}

.nav-close:before {
    -webkit-transform: rotate(45deg);
        -ms-transform: rotate(45deg);
            transform: rotate(45deg);
}

.nav-close:after {
    -webkit-transform: rotate(-45deg);
        -ms-transform: rotate(-45deg);
            transform: rotate(-45deg);
}

.nav-close:hover:before,
.nav-close:hover:after {
    background: rgb(255,255,255);
}

.nav ul {
    padding: 90px 9% 5%;
    list-style: none;
    counter-reset: item;
}

.nav li:before {
    display: block;
    float: right;
    padding-right: 4%;
    padding-left: 5px;
    text-align: right;
    font-size: 1.2rem;
    vertical-align: bottom;
    color: #B8B8B8;
    content: counter(item, lower-roman);
    counter-increment: item;
}
.nav li {
    margin: 0;
}
/* ... */

